# Quantum-Aware-Secure-Communication-System-QASCS-

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  PROJECT_QUICKSTART.md  PROJECT_SETUP.md  ROADMAP.md  SAMPLE_ISSUES.md  SETUP_SUMMARY.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-label.yml  ci.yml
docs/: architecture.md  pqc-integration.md  threat-model.md
qasccs/: __init__.py  __main__.py
qasccs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qasccs/quantum_risk_engine/: __init__.py  cli.py  models.py  policy.py
qasccs/secure_channel/: __init__.py  client.py  common.py  server.py
qasccs/tools/: gen_certs.py  pqc_tls.py
tests/: test_cli.py  test_gen_certs.py  test_models.py  test_policy.py  test_policy_extended.py  test_secure_channel.py
