[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qasccs"
version = "0.1.0"
description = "Quantum-Aware Secure Communication System (QASCS)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qasccs*"]
